--- a/car_sales.ipynb
+++ b/car_sales.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are ML expert working in a car making company and you would like to develop a model to predict the total amount requried to make a car that depend on the following attributes:\n",
+    "You are ML expert working in a car making company and you would like to develop a model to predict the total amount required to make a car that depend on the following attributes:\n",
     "\n",
     "- Manufacturer\n",
     "- Model\n",
@@ -1059,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 10 : Evaluting the dataset"
+    "# Step 10 : Evaluating the dataset"
    ]
   },
   {
